force-app/main/default/objects/redwing__ILT_Session__c/redwing__ILT_Session__c.object-meta.xml
<CustomObject>
    <label>ILT Session</label>
    <nameField>
        <label>ILT Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ILT Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>