force-app/main/default/objects/redwing__ILT_Session__c/fields/redwing__All_Day_Event__c.field-meta.xml
<CustomField>
    <fullName>redwing__All_Day_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox if the ILT Session will be going throughout the whole day</description>
    <label>All-Day Event</label>
    <type>Checkbox</type>
</CustomField>