force-app/main/default/objects/redwing__ILT_Session__c/fields/redwing__Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Date__c</fullName>
    <description>Date when the ILT Session will start/end</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>