force-app/main/default/objects/redwing__ILT_Session__c/fields/redwing__End_Time__c.field-meta.xml
<CustomField>
    <fullName>redwing__End_Time__c</fullName>
    <defaultValue>&quot;20:00&quot;</defaultValue>
    <label>End Time</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>