force-app/main/default/objects/redwing__ILT_Session__c/fields/redwing__ILT_Class__c.field-meta.xml
<CustomField>
    <fullName>redwing__ILT_Class__c</fullName>
    <label>ILT Class</label>
    <referenceTo>redwing__ILT_Class__c</referenceTo>
    <relationshipLabel>ILT Sessions</relationshipLabel>
    <relationshipName>ILT_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>