force-app/main/default/objects/redwing__ILT_Session__c/fields/redwing__Location__c.field-meta.xml
<CustomField>
    <fullName>redwing__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Physical location at which ILT Session will be held. Location are created separately and then added to the ILT Session via a look-up</description>
    <label>Location</label>
    <referenceTo>redwing__ILT_Location__c</referenceTo>
    <relationshipLabel>ILT Sessions</relationshipLabel>
    <relationshipName>ILT_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>