force-app/main/default/objects/redwing__ILT_Session__c/fields/redwing__Optional__c.field-meta.xml
<CustomField>
    <fullName>redwing__Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox if the ILT Session will be optional</description>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>