force-app/main/default/objects/redwing__ILT_Session__c/fields/redwing__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>redwing__Start_Time__c</fullName>
    <defaultValue>&quot;08:00&quot;</defaultValue>
    <description>Time at which the ILT Session will start</description>
    <label>Start Time</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>