force-app/main/default/objects/redwing__ILT_Session__c/fields/redwing__Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ILT</fullName>
                <default>true</default>
                <label>ILT</label>
            </value>
            <value>
                <fullName>vILT</fullName>
            </value>
            <value>
                <fullName>vILT Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>