force-app/main/default/objects/redwing__ILT_Session__c/fields/redwing__vILT_Meeting__c.field-meta.xml
<CustomField>
    <fullName>redwing__vILT_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>vILT Meeting</label>
    <referenceTo>redwing__vILT_Meeting__c</referenceTo>
    <relationshipLabel>ILT Sessions</relationshipLabel>
    <relationshipName>ILT_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>